晚上notification和pagination的文档

--- a/example/pages/components/data-display/pagination/index.html
+++ b/example/pages/components/data-display/pagination/index.html
@@ -16,7 +16,7 @@
     <div class="col-24 pb-20">
       <ma-code>
         <div class="right">
-          <a href="https://jsfiddle.net/youpinyao/wdzLvgfb/1/" target="_blank">jsfiddle</a>
+          <a href="https://jsfiddle.net/youpinyao/zftbgh66/" target="_blank">jsfiddle</a>
         </div>
         <code ng-bind="codeText"></code>
         <h3>ma-config</h3>
