--- a/example/pages/components/general/button/code.html
+++ b/example/pages/components/general/button/code.html
@@ -17,8 +17,7 @@
 </div>
 <div class="col-12">
   <h4>Default</h4>
-  <ma-button ma-size="{{sizeModel}}">
-    <ma-icon ma-type="download"></ma-icon>Default</ma-button>
+  <ma-button ma-size="{{sizeModel}}">Default</ma-button>
   <ma-button ma-size="{{sizeModel}}"
     ng-disabled="true">Default</ma-button>
 
@@ -35,6 +34,16 @@
   <ma-button ma-size="{{sizeModel}}"
     ma-type="danger"
     ng-disabled="true">Danger</ma-button>
+  <h4>Loading</h4>
+  <ma-button ma-size="{{sizeModel}}"
+    ma-loading="true"
+    ma-type="default">Default</ma-button>
+  <ma-button ma-size="{{sizeModel}}"
+    ma-loading="true"
+    ma-type="primary">Primary</ma-button>
+  <ma-button ma-size="{{sizeModel}}"
+    ma-loading="true"
+    ma-type="danger">Danger</ma-button>
 </div>
 
 <div class="col-12">
