--- a/example/pages/components/general/button/index.html
+++ b/example/pages/components/general/button/index.html
@@ -63,6 +63,12 @@
           <td>false</td>
         </tr>
         <tr>
+          <td>ma-loading</td>
+          <td>是否显示loading icon</td>
+          <td>Boolean</td>
+          <td>false</td>
+        </tr>
+        <tr>
           <td>ng-disabled</td>
           <td>是否为不可用状态</td>
           <td>Boolean</td>
