--- a/src/components/pagination/src/maPaginationTpl.html
+++ b/src/components/pagination/src/maPaginationTpl.html
@@ -5,7 +5,7 @@
   <div class="pagination-item" ng-show="conf.totalItems > 0">
     <ul class="pagination" ng-show="conf.totalItems > 0">
         <li class="prev" ng-class="{disabled: conf.currentPage == 1}" ng-click="prevPage()"><span>&laquo;</span></li>
-        <li ng-repeat="item in pageList track by $index" ng-class="{active: item == conf.currentPage, separate: item == \'...\'}" ng-click="changeCurrentPage(item)"><span>{{ item }}</span></li>
+        <li ng-repeat="item in pageList track by $index" ng-class="{active: item == conf.currentPage, separate: item == '...'}" ng-click="changeCurrentPage(item)"><span>{{ item }}</span></li>
         <li class="next" ng-class="{disabled: conf.currentPage == conf.numberOfPages}" ng-click="nextPage()"><span>&raquo;</span></li>
       </ul>
   </div>
