--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -60,6 +60,11 @@
             uploadText: '上传图片',
             convert: function (data, response){
 
+            },
+            //oss配置
+            ossConfig: {
+              OSSAccessKeyId: '',
+              signature: '',
             }
           }
         </code>
