--- a/src/components/upload/src/maUploadImageTpl.html
+++ b/src/components/upload/src/maUploadImageTpl.html
@@ -10,25 +10,34 @@
         'background-image': 'url({{file.url}})'
       }"></div>
     <div class="image"
+      ng-if="file.url && isVideo(file)"
+      ng-style="{
+        'background-image': 'url({{file.cover_url || getSnapshot(file)}})'
+      }"
+    >
+    </div>
+    <div class="image"
       ng-if="!file.url && file.id && isImg(file)"
       ng-style="{
         'background-image': 'url({{$ctrl.uploadConfig.viewUrl + '?file_id=' + file.id}})'
       }"></div>
 
     <div class="image"
-      ng-if="!isImg(file)">
+      ng-if="!isImg(file) && !isVideo(file)">
       <ma-icon ma-type="{{getFileIcon(file)}}"></ma-icon>
     </div>
 
     <div class="handle-box"
       ng-show="file.progress === undefined || file.progress === 100">
-      <ma-icon class="close"
-        ma-type="eyeo"
+      <div>
+        <ma-icon class="close"
+        ma-type="{{isVideo(file) ? 'playcircleo' : 'eyeo'}}"
         ma-click="viewFile(ngModel, file, $index)"></ma-icon>
-      <ma-icon class="close"
-        ma-type="delete"
-        ma-click="delFile(file, $index)"
-        ng-show="showDelete != 'false' && file.showDelete !== false && (file.progress === undefined || file.progress === 100)"></ma-icon>
+        <ma-icon class="close"
+          ma-type="delete"
+          ma-click="delFile(file, $index)"
+          ng-show="showDelete != 'false' && file.showDelete !== false && (file.progress === undefined || file.progress === 100)"></ma-icon>
+      </div>
     </div>
 
     <ma-progress ma-type="circle"
@@ -42,15 +51,23 @@
 
   <div class="upload-image-item add"
     ng-hide="$ctrl.uploadConfig.limit <= ngModel.length">
-    <ma-icon ma-type="plus"></ma-icon>
-    <div>{{$ctrl.uploadConfig.uploadText || '上传照片'}}</div>
+    <div class="upload-img-item-add-box">
+      <div class="upload-img-item-add-box-container">
+        <ma-icon ma-type="plus"></ma-icon>
+        <div>{{$ctrl.uploadConfig.uploadText || '上传照片'}}</div>
+      </div>
+    </div>
   </div>
 
   <div class="upload-image-item add-double"
     ng-repeat="item in $ctrl.uploadConfig.limitArray track by $index"
     ma-click="clickInput($event)"
     ng-if="$index < ($ctrl.uploadConfig.limit - ngModel.length) && $index !== 0">
-    <ma-icon ma-type="plus"></ma-icon>
-    <div>{{$ctrl.uploadConfig.uploadText || '上传照片'}}</div>
+    <div class="upload-img-item-add-box">
+        <div class="upload-img-item-add-box-container">
+          <ma-icon ma-type="plus"></ma-icon>
+          <div>{{$ctrl.uploadConfig.uploadText || '上传照片'}}</div>
+        </div>
+    </div>
   </div>
 </div>
