--- a/src/scss/_upload.scss
+++ b/src/scss/_upload.scss
@@ -132,10 +132,19 @@
         line-height: 60px;
         color: $grey;
       }
+      video {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
     }
     .handle-box {
       visibility: hidden;
       opacity: 0;
+      display: flex;
+      align-items: center;
       position: absolute;
       left: 4px;
       top: 4px;
@@ -143,16 +152,21 @@
       right: 4px;
       margin: auto;
       line-height: 30px;
-      padding-top: 28px;
+      padding: 28px 0;
       background-color: rgba($black, 0.4);
       color: $white;
       @include transition();
+      > div {
+        text-align: center;
+        flex: 1;
+      }
       i {
         display: inline-block;
         font-size: $font24;
         margin: 0px 2px;
         cursor: pointer;
         opacity: 0.8;
+        vertical-align: top;
         @include transition();
         &:hover {
           opacity: 1;
@@ -165,11 +179,19 @@
         opacity: 1;
       }
     }
+    .upload-img-item-add-box {
+      display: flex;
+      align-items: center;
+      .upload-img-item-add-box-container {
+        flex: 1;
+      }
+    }
     &.add-double,
     &.add {
       position: relative;
       cursor: pointer;
-      padding-top: 8px;
+      padding-top: 15px;
+      padding-bottom: 15px;
       @include transition();
       &:hover {
         background-color: $hover;
@@ -188,8 +210,8 @@
         padding: 0;
       }
       i {
-        font-size: 50px;
-        line-height: 50px;
+        font-size: 40px;
+        line-height: 40px;
         color: #d8d8d8;
       }
     }
