ossConfig 配置说明修改

--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -65,6 +65,8 @@
             ossConfig: {
               OSSAccessKeyId: '',
               signature: '',
+              policy: '',
+              dir: '',
             }
           }
         </code>
