--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -54,7 +54,8 @@
             size: {
               gif: 10 * 1024 * 1024,
               png: 10 * 1024 * 1024,
-              jpg: 10 * 1024 * 1024
+              jpg: 10 * 1024 * 1024,
+              mp4: 10 * 1024 * 1024
             },
             accept: '',
             uploadText: '上传图片',
