fix: upload component aliyun video snapshot not show file icon

--- a/src/components/upload/src/maUploadImageTpl.html
+++ b/src/components/upload/src/maUploadImageTpl.html
@@ -23,7 +23,7 @@
       }"></div>
 
     <div class="image"
-      ng-if="!isImg(file) && !isVideo(file)">
+      ng-if="!isImg(file) && !isVideo(file) && !isSnapshot(file)">
       <ma-icon ma-type="{{getFileIcon(file)}}"></ma-icon>
     </div>
 
