--- a/src/components/table/src/pager.html
+++ b/src/components/table/src/pager.html
@@ -1,5 +1,4 @@
-<div class="ng-cloak ng-table-pager"
-  ng-if="params.data.length">
+<div class="ng-cloak ng-table-pager">
   <div ng-if="params.settings().counts.length"
     class="ng-table-counts btn-group pull-right">
     <button ng-repeat="count in params.settings().counts"
