fix:【【代理商平台】女人通账户列表，切换到最后一页，在加载过程中，能明显看到这个框】 https://www.tapd.cn/39493392/bugtrace/bugs/view/1139493392001048324

--- a/src/components/table/src/maTableTpl.html
+++ b/src/components/table/src/maTableTpl.html
@@ -5,6 +5,7 @@
       <!-- 左边漂浮 table -->
       <div class="float-left-table"
         ng-style="{width: $tableCtrl.floatLeftBoxWidth + 'px', height:$tableCtrl.floatTableHeight + 'px'}"
+        ng-show="$tableCtrl.showFloatTable"
         ng-if="$tableCtrl.floatLeftCols !== false">
         <div ng-style="{width: $tableCtrl.floatTableWidth + 'px'}">
           <table template-header='header1.html'
@@ -31,6 +32,7 @@
       <!-- 右边漂浮 table -->
       <div class="float-right-table"
         ng-style="{width: $tableCtrl.floatRightBoxWidth + 'px', height:$tableCtrl.floatTableHeight + 'px'}"
+        ng-show="$tableCtrl.showFloatTable"
         ng-if="$tableCtrl.floatRightCols !== false">
 
         <div ng-style="{width: $tableCtrl.floatTableWidth + 'px'}">
