--- a/src/components/message/src/maMessageTpl.html
+++ b/src/components/message/src/maMessageTpl.html
@@ -1,5 +1,5 @@
 <div class="weak-tip" ng-show="$root.weakTipList.length">
-  <div ng-repeat="tip in $root.weakTipList" ng-if="tip.remove !== true">
+  <div ng-repeat="tip in $root.weakTipList" ng-style="{top: $index * 45 + 'px'}" ng-if="tip.remove !== true">
     <div
     ng-click="$root.$hideMessage($index)"
     ng-class="{'show-in': tip.hide === false, 'weak-tip-success': tip.type == 'success', 'weak-tip-danger': tip.type == 'danger', 'weak-tip-warning': tip.type == 'warning'}" ng-bind="tip.text"
