--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -25,7 +25,7 @@
     bottom: 0px;
     margin: auto;
     z-index: 998;
-    @include transition();
+    @include transition(opacity 300ms ease);
     .ma-spin {
       width: 100%;
       height: 50px;
@@ -38,6 +38,10 @@
     &.show {
       visibility: visible;
       opacity: 1;
+    }
+    &.full {
+      top: 0;
+      background-color: #ffffff;
     }
   }
   .data-table .table-number-col {
